--- a/css/screen.css
+++ b/css/screen.css
@@ -31,67 +31,19 @@
 */
 
 /* body, general styles ---------------------------------------------------------- */
-body { padding: 0 2.25em; margin: 0 auto; width: 43.5em; background: #333; }
-
-.advert468 { margin: 10px; width: 468px; height: 60px; background: #ccc; } 
+body { padding: 0 2.25em; margin: 0 auto; width: 43.5em; }
 
 
 /* header ------------------------------------------------------------------------ */
-header { width: 100%; height: 164px; float: left; background: url(../images/design/header_bg.jpg) top center no-repeat; }
-#logo { width: 240px; margin: 24px 0 24px 24px; float: left; position: absolute; z-index: 2 }
-
-
-/* global nav -------------------------------------------------------------------- */
-header nav ul { list-style: none; float: left; height: 48px; padding-top: 24px; background: rgba(0,0,0,.65); box-shadow: 0px 0px 10px #000; -moz-box-shadow: 0px 0px 10px #000; -webkit-box-shadow: 0px 0px 10px #000; width: 696px; margin: 48px 0 0 0; position: absolute; clip: rect(-10px 696px 86px 0px); }
-header nav ul li { display: inline; width: 60px; margin: 0 4px; font-family: "Rockwell", serif; font-weight: bold; }
-header nav ul li:nth-of-type(1) { margin-left: 288px; }
-header nav ul li a, header nav ul li a:active, header nav ul li a:visited { color: #f3f3d0; text-shadow: #000 0px 0px 10px; }
-
-footer nav ul { list-style: none; float: right; margin: 0; width: 364px; }
-footer nav ul li { float: left; text-align: center; width: 76px; }
+header { width: 100%; float: left; }
 
 
 /* content ----------------------------------------------------------------------- */
-#content { background: #fff; float: left; width: 43.5em; margin: 1.5em 0; padding: 1.5em 0; }
-
-#indexCTA { width: 408px; float: left; }
-
-td p { margin: 0; }
-.controls { font-size: 10px; }
-
-.logo { margin: 0 5px 0 0; max-width: 100px; }
-.city { display: block; width: 100px; }
-.team { display: block; width: 100px; font-size: 3em; margin: 0; }
-
-
-/* Scorecard --------------------------------------------------------------------- */
-.currentInning { background: #fc3; font-weight: bold; }
-#boxScore th, #boxScore td { text-align: center; }
-#boxScore th:nth-of-type(1), #boxScore td:nth-of-type(1) { text-align: left; }
-
-
-/* jQuery UI --------------------------------------------------------------------- */
-.ui-widget-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,.75); z-index: 3; }
-.ui-dialog { position: absolute; padding: .2em; width: 300px; overflow: hidden; background: #fff; }
-.ui-dialog .ui-dialog-titlebar { padding: .5em 1em .3em; position: relative;  }
-.ui-dialog .ui-dialog-title { float: left; margin: .1em 16px .2em 0; width: 100%; } 
-.ui-dialog .ui-dialog-titlebar-close { position: absolute; right: .3em; top: 50%; width: 19px; margin: -10px 0 0 0; padding: 1px; height: 18px; }
-a.ui-dialog-titlebar-close { display: none; }
-.ui-dialog .ui-dialog-titlebar-close span { display: block; margin: 1px; }
-.ui-dialog .ui-dialog-titlebar-close:hover, .ui-dialog .ui-dialog-titlebar-close:focus { padding: 0; }
-.ui-dialog .ui-dialog-content { position: relative; border: 0; padding: .5em 1em; overflow: auto; zoom: 1; }
-.ui-dialog .ui-dialog-buttonpane { text-align: left; border-width: 1px 0 0 0; margin: .5em 0 0 0; padding: .3em 1em .5em .4em; }
-.ui-dialog .ui-dialog-buttonpane .ui-dialog-buttonset { float: right; }
-.ui-dialog .ui-dialog-buttonpane button { margin: .5em .4em .5em 0; cursor: pointer; }
-.ui-dialog .ui-resizable-se { width: 14px; height: 14px; right: 3px; bottom: 3px; cursor: se-resize; background: #000; }
-.ui-draggable .ui-dialog-titlebar { cursor: move; }
-.ui-dialog fieldset { width: 648px; padding: 1.4em 0 0 0; margin: 0; }
+#content { float: left; width: 43.5em; margin: 1.5em 0; }
 
 
 /* footer ------------------------------------------------------------------------ */
 footer { float: left; width: 100%; }
-footer p { float: left; }
-footer p, footer ul { font-size: 12px; }
 
 
 .left { margin-left: 0; }
