--- a/trunk/css/slideLock.css
+++ b/trunk/css/slideLock.css
@@ -5,12 +5,13 @@ span.quiet { font-size: .875em; }
 #locked, #unlocked, p.quiet img { display: block; float: left; }
 #locked { font-weight: bold; color: #333; width: 124px; }
 #unlocked { width: 124px; text-align: right; }
-p.quiet img { margin: 0; width: 16px; }
+p.quiet img { margin: 0; }
 
 /* Slider ----------------------------------*/
-.ui-slider { position: relative; text-align: left; display: block; margin: 10px 0 10px 288px; width: 264px; }
-.ui-slider-handle { position: absolute; z-index: 2; width: 1.2em; height: 1.2em; cursor: pointer; background: #333; top: -.2em; margin-left: -.6em; border-radius: .4em; -moz-border-radius: .4em; -webkit-border-radius: .4em; background: -moz-linear-gradient(top, #147b99, #0b4353); background: -webkit-gradient(linear, left top, left bottom, from(#147b99), to(#0b4353)); }
-.ui-slider-horizontal { height: .8em; background: #ddd; border: 1px solid #ccc; border-radius: .4em; -moz-border-radius: .4em; -webkit-border-radius: .4em; }
-.ui-slider-handle:hover, .ui-state-hover, .ui-state-focus, .ui-state-active { background: #aaa; }
-a.ui-state-hover, a.ui-state-focus { background: -moz-linear-gradient(top, #666, #333); background: -webkit-gradient(linear, left top, left bottom, from(#666), to(#333)); box-shadow: 0px 0px 10px #147b99; -moz-box-shadow: 0px 0px 10px #147b99; -webkit-box-shadow: 0px 0px 10px #147b99; }
-a.ui-state-active { background: -moz-linear-gradient(top, #ddd, #aaa); background: -webkit-gradient(linear, left top, left bottom, from(#ddd), to(#aaa)); }
+.ui-slider { margin: 10px 0 10px 288px; width: 264px; }
+.ui-slider-handle { }
+.ui-slider-handle:hover { cursor: e-resize; }
+.ui-slider-horizontal { }
+.ui-slider-handle:hover, .ui-state-hover, .ui-state-focus, .ui-state-active { }
+a.ui-state-hover, a.ui-state-focus { }
+a.ui-state-active { }
